#TESTS = test

AM_CFLAGS = -I$(top_builddir)/lib -ggdb

#noinst_PROGRAMS = xdrclient xdrserver
#
#xdrclient_SOURCES = xdrclient.c
#xdrclient_LDFLAGS = -static
#xdrclient_LDADD        = $(top_builddir)/lib/libganglia.la
#xdrclient_DEPENDENCIES = $(top_builddir)/lib/libganglia.la
#
#
#xdrserver_SOURCES = xdrserver.c
#xdrserver_LDFLAGS = -static
#xdrserver_LDADD        = $(top_builddir)/lib/libganglia.la
#xdrserver_DEPENDENCIES = $(top_builddir)/lib/libganglia.la
